# RobomasterVIPSpring2020

./: README.md
Electrical/: .README.md.swp  README.md
Electrical/DartBoardATMEGAV1/: dartBoardATMEGAV1.s#1  dartBoardATMEGAV1.s#2  dartBoardATMEGAV1.s#3  dartBoardATMEGAV1.s#4  dartBoardATMEGAV1.s#5  dartBoardATMEGAV1.s#6  dartBoardATMEGAV1.s#7  dartBoardATMEGAV1.s#8  dartBoardATMEGAV1.s#9  dartBoardATMEGAV1.sch
Electrical/DartBoardV1/: dartBoardV1.brd  dartBoardV1.s#1  dartBoardV1.s#2  dartBoardV1.s#3  dartBoardV1.s#4  dartBoardV1.s#5  dartBoardV1.s#6  dartBoardV1.s#7  dartBoardV1.s#8  dartBoardV1.s#9  dartBoardV1.sch
Electrical/Tests/BNO055Test/: .stm32Example.c.swp  main.c  raspberrypiExample.cpp
Electrical/Tests/controlTest/: finControllerTestMainFunction.c
Electrical/Tests/driverTest/: driverTest.ino
Electrical/Tests/spiTest/: masterTest.cpp  masterTest.py  (+2 more)
Electrical/darCodeV1/: .cproject  .mxproject  .project  dartCodeV1.ioc
Electrical/dartPCB/: dartPCB.s#1  dartPCB.sch
Electrical/driverTest/: driverTest.ino
Software/: CMakeLists.txt  ControlAlgorithm.cpp  Dart.h  Fin.h  JeffDocument  LightDetector.h  PIDController.h  README.md  camera_parameter_test.py  contourCircleDetection.py  direct_brightness_editing.py  gamma_correction.py  guiding_light_detection.py  houghCircleDetection.py  pixy_test.ino
Software/old/: contourCircleDetection.py  controlAlgorithm.py  direct_brightness_editing.py  gamma_correction.py  houghCircleDetection.py  pixy_test.ino
Target Dummy/: Mark1 CAD screenshot  README.md
Target Dummy/CAD_screenshot/: README.MD
(+4 files in other folders)
